# Homework_2_techno-park

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  generate_file.py  results.txt  test_file.txt
.github/workflows/: CI.yml
include/: file_interaction.h  stucture_t.h
src/: CMakeLists.txt  count_symbols_sequence.c  count_symbols_thread.c  file_interaction.c  main.c  time_test.c
tests/: CMakeLists.txt  test.cpp  test_file.txt
